# drfwn_quick

./: .bumpversion.cfg  .flake8  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
src/drfwn_quick/: data.py  serializers.py  settings.py  utils.py  viewsets.py
tests/: settings.py  test__viewsets.py  test_data.py  test_serializers.py  test_utils.py
